fixed scrollbar clearfix issue

--- a/public/css/clearui.less
+++ b/public/css/clearui.less
@@ -34,8 +34,6 @@ body {
 
 #chat {
 	padding: 0px 10px;
-	overflow-x: visible;
-	overflow-y: hidden;
 	list-style: none;
 	margin-bottom: 100px;
 
@@ -48,7 +46,6 @@ body {
 		float: left;
 		clear: both;
 		animation: user-msg-enter 1s;
-		width: 100%;
 	}
 
 	.bot {
@@ -60,11 +57,9 @@ body {
 		float: right;
 		clear: both;
 		animation: bot-msg-enter 1s;
-		width: 100%;
 	}
 
 	.msg {
-		display: block;
 		color: black;
 		padding: 10px 15px;
 		background-color: white;
